# d42x

./: .gitmodules  README.md  compose.override.yaml  compose.yaml
backend/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  compose.yaml
backend/d42x-server/: .gitignore  Cargo.toml  README.md  base.ts  bun.lockb  input.css  package.json
backend/d42x-server/src/: app.rs  authentication.rs  config.rs  lib.rs  main.rs
backend/d42x-server/src/app/: mod.rs  shared_data.rs
backend/d42x-server/src/app/middlewares/: auth.rs  cipher.rs  mod.rs
backend/d42x-server/src/business/: auth.rs  cache.rs  mod.rs
backend/d42x-server/src/business/accounts/: gen_account_repo.rs  mod.rs  test.rs
backend/d42x-server/src/business/category/: gen_cate_repo.rs  mod.rs
backend/d42x-server/src/business/meme/: gen_meme_repo.rs  meme_entity.rs  mod.rs  test.rs
backend/d42x-server/src/business/suggests/: gen_suggest_repo.rs  mod.rs
backend/d42x-server/src/controllers/admin/: category.rs  memes.rs  mod.rs  models.rs
backend/d42x-server/src/controllers/client/: interaction.rs  mod.rs  models.rs  ui.rs
backend/d42x-server/src/db/: mod.rs  shared_db_helper.rs
backend/d42x-server/src/middleware/: cipher.rs  mod.rs
backend/d42x-server/templates/: base.html  category.html  home.html
backend/d42x-server/wwwroot/: base.js
backend/d42x-ui/: index.html  package.json  vite.config.ts
backend/d42x-ui/src/: App.vue  config.ts  router.ts
backend/d42x-ui/src/components/: CategoryList.vue  Footer.vue  Icon.vue  MemeDetail.vue  MemeEntity.vue  MemeGroup.vue  MemeList.vue  MemeSeries.vue  Return2Top.vue  TopNav.vue
backend/d42x-ui/src/components/MemeEntity/: AnimateImg.vue  Index.vue  StaticImg.vue
backend/d42x-ui/src/mocks/: handlers.ts
backend/d42x-ui/src/net/: category.ts  cipher.ts  http.ts  interactions.ts  meme.ts  models.ts
backend/d42x-ui/src/utilities/: emoji.ts
backend/d42x-ui/src/view/: Home.vue
backend/db_entity/: Cargo.toml
backend/db_entity/src/: accounts.rs  categories.rs  lib.rs  meme_urls.rs  memes.rs  prelude.rs  suggests.rs  targets.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250225_082047_create_memes.rs  m20250303_085702_create_categories.rs  m20250303_085702_create_targets.rs  m20250324_110708_create_suggests.rs  m20250405_031951_create_meme_index.rs
backend/server/: Cargo.toml  README.md
backend/server/src/: app.rs  config.rs  lib.rs  main.rs
backend/server/src/business/: auth.rs
backend/server/src/controllers/admin/: mod.rs  models.rs
backend/server/src/db/: mod.rs
backend/server/src/middleware/: auth.rs  cipher.rs  mod.rs
d42x-ui/: .dockerignore  .env  Dockerfile  compose.yaml  index.html  tsconfig.json
d42x-ui/src/: config.ts  main.css  main.ts  vite-env.d.ts
server/: .env  Cargo.toml
(+18 files in other folders)
