[workspace]
members = ["server", "migration", "db_entity"]
resolver = "2"

[workspace.dependencies]
sea-orm = { version = "1.1.5", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "uuid",
    "chrono",
] }

uuid = { version = "1.13.2", features = ["v7"] }
chrono = { version = "0.4.39", features = ["alloc", "now"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
