[package]
name = "d42x-server"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
axum = "0.8.1"
dotenv = "0.15.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "sync"] }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sea-orm = { workspace = true }
chrono = { workspace = true }

db_entity = { version = "0.1.0", path = "../db_entity" }
migration = { version = "0.1.0", path = "../migration" }
clap = "4.5.30"
listenfd = "1.0.2"
thiserror = "2.0.11"
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
validator = { version = "0.20.0", features = ["derive"] }
lazy_static = "1.5.0"
hex = "0.4.3"
soft-aes = "0.2.2"
bcrypt = "0.17.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
tower = "0.5.2"
moka = { version = "0.12.10", features = ["sync"] }
nanoid = {workspace=true}


[dev-dependencies]
mockall = "0.13.1"
pretty_assertions = "1.4.1"
sea-orm = { workspace = true, features = ["sqlx-sqlite"] }
