[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
dotenv = "0.15.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sea-orm = { workspace = true }
chrono = { workspace = true }

db_entity = { version = "0.1.0", path = "../db_entity" }
migration = { version = "0.1.0", path = "../migration" }
clap = "4.5.30"
listenfd = "1.0.2"
thiserror = "2.0.11"
serde = "1.0.217"
serde_json = "1.0.138"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
validator = { version = "0.20.0", features = ["derive"] }
lazy_static = "1.5.0"
hex = "0.4.3"
soft-aes = "0.2.2"
bcrypt = "0.17.0"

[dev-dependencies]
